#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ([2.69])
AC_INIT([Teocli], [0.0.14])

# Checks for programs.
AC_PROG_CXX
AC_PROG_AWK
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB


AM_INIT_AUTOMAKE
AM_INIT_AUTOMAKE([subdir-objects])

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lteocli':
AC_CHECK_LIB([teocli], [main])


# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

LT_INIT

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
